<resources>
    <string name="app_name">Socializer</string>

    <string name="not_registered">Not Registered Yet , Sign Up !</string>
    <string name="log_in">Log In</string>
    <string name="type_pass">Type Your Password</string>
    <string name="type_your_email">Type your Email</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered , Sign In !</string>
    <string name="log_out">Log Out</string>
    <string name="notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="new_str">New</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_username">Type your username</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="john_doe">john_doe</string>
    <string name="_0">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="this_is_my_profile_bio">This is my profile bio.</string>
    <string name="next">Next</string>
    <string name="select_a_forum_for_your_post">Select a forum for your post</string>
    <string name="search_forum">Search forum</string>
    <string name="forum">Forum</string>
    <string name="share">Share</string>
    <string name="now">now</string>
    <string name="this_is_the_last_message">This is the last message</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="create_a_new_forum">Create a new forum</string>
    <string name="create_forum">Create forum</string>

</resources>