<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Profile header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Profile picture -->
        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/baseline_person_outline"
            android:scaleType="centerCrop" />

        <!-- Username and follow button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profile_picture"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_doe"
                android:textSize="18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/follow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginTop="12sp"
                    android:backgroundTint="@color/red_theme"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/message_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:layout_marginTop="12sp"
                    android:backgroundTint="@color/red_theme"
                    android:textColor="@color/black" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    <!-- Profile stats -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/followers_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:layout_toEndOf="@id/followers_count"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/followers_text"
            android:layout_marginStart="16dp"
            android:text="@string/_0"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/following_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/following_count"
            android:layout_marginStart="5dp"
            android:text="@string/following"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/posts_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/following_text"
            android:layout_marginStart="16dp"
            android:text="@string/_0"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/posts_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/posts_count"
            android:layout_marginStart="5dp"
            android:text="Posts"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Profile bio -->
    <TextView
        android:id="@+id/bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_my_profile_bio"
        android:textSize="14sp"
        android:padding="16dp" />

    <!-- Profile posts -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>