<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Post Author -->
        <TextView
            android:id="@+id/post_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:text="john_doe" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:src="@drawable/round_face_5_24"
            android:layout_marginStart="10dp"
            app:tint="@color/grey"
            android:layout_marginTop="1dp"/>

        <!-- Post time -->
        <TextView
            android:id="@+id/post_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/now" />

    </LinearLayout>


    <!-- Post Title -->
    <TextView
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="This is the post title" />

    <!-- Post Content -->
    <TextView
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="This is the post content" />

    <!-- Post Image (Optional) -->
    <ImageView
        android:id="@+id/post_image_optional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <!-- Post Upvote and Downvote Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/upvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_thumb_up_alt_24" />

        <TextView
            android:id="@+id/post_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="0" />

        <ImageView
            android:id="@+id/downvote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_thumb_down_alt_24" />

        <TextView
            android:id="@+id/feed_comments_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="16sp"
            android:layout_marginStart="20dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_insert_comment_24"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/share">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_ios_share_24"
                android:layout_marginStart="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="16sp"
                android:layout_marginStart="5dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>